Made some more changes Also added css Also added H1 tags

--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <h1>Hello world</h1>
+    <section>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ducimus consequatur alias consequuntur
+            placeat veniam saepe accusamus rem facilis adipisci sunt fuga libero minima et ut, repellat dicta labore!
+            Dolorum.
+        </p>
+    </section>
 </body>
+
 </html>
